Finish whole the html pages

--- a/404-simple.html
+++ b/404-simple.html
@@ -59,8 +59,7 @@
                 <div class="card-body">
                   <div class="d-flex align-items-center"><i class="ci-search text-success h4 mb-0"></i>
                     <div class="ps-3">
-                      <h5 class="fs-sm mb-0">Tìm kiếm</h5><span class="text-muted fs-ms">Tìm kiếm những tường
-                        phát</span>
+                      <h5 class="fs-sm mb-0">Tìm kiếm</h5><span class="text-muted fs-ms">Tìm kiếm sản phầm</span>
                     </div>
                   </div>
                 </div>
