--- a/home.html
+++ b/home.html
@@ -145,7 +145,7 @@
         </div>
       </div>
       <!-- Search collapse-->
-      <div class="search-box collapse pt-4" id="searchBox">
+      <div class="search-box collapse mt-md-5" id="searchBox">
         <div class="container">
           <div class="input-group"><i class="ci-search position-absolute top-50 start-0 translate-middle-y ms-3"></i>
             <input class="form-control rounded-start text-center" type="text" placeholder="Nhập tên sản phẩm tìm kiếm">
@@ -157,17 +157,58 @@
     <!-- Banner-->
     <section>
       <div class="bg-position-bottom-center bg-color-tp-5 bg-repeat-0 pt-2 pb-5"
-        style="background-image: url(../img/image-5.png)">
+        style="background-image: url(img/image-5.png)">
         <div class="container pt-4 mb-3 mb-lg-0">
           <div class="row product-card-1 text-center">
             <div class="col-md-8 px-md-5">
-              <h1 class="card-title text-uppercase fw-bold text-color-tp-1 mb-3 let-space-10">Đồ đồng tường phát</h1>
-              <h2 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Hưởng phúc gia tiên</h2>
-              <p class="card-text fs-sm let-space-10 my-3 px-md-4">Đúc Đồng Tường Phát chuyên tâm chế tác những sản phẩm
-                đồ đồng cao cấp,
-                với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
-              <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
-              <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+
+              <div class="tns-carousel">
+                <!-- <div class="tns-carousel-inner" data-carousel-options='{"nav": false, "autoplay": true}'> -->
+                <div class="tns-carousel-inner" data-carousel-options='{"nav": false}'>
+
+                  <!-- Item -->
+                  <div>
+                    <h1 class="card-title text-uppercase fw-bold text-color-tp-1 mb-3 let-space-10">Đồ đồng tường phát
+                    </h1>
+                    <h2 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Hưởng phúc gia tiên</h2>
+                    <p class="card-text fs-sm let-space-10 my-3 px-md-4">Đúc Đồng Tường Phát chuyên tâm chế tác những
+                      sản phẩm
+                      đồ đồng cao cấp,
+                      với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
+                    <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
+                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                  </div>
+
+                  <!-- Item -->
+                  <div>
+                    <h1 class="card-title text-uppercase fw-bold text-color-tp-1 mb-3 let-space-10">Đồ đồng tường phát
+                    </h1>
+                    <h2 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Hưởng phúc gia tiên</h2>
+                    <p class="card-text fs-sm let-space-10 my-3 px-md-4">Đúc Đồng Tường Phát chuyên tâm chế tác những
+                      sản phẩm
+                      đồ đồng cao cấp,
+                      với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
+                    <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
+                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                  </div>
+
+                  <!-- Item -->
+                  <div>
+                    <h1 class="card-title text-uppercase fw-bold text-color-tp-1 mb-3 let-space-10">Đồ đồng tường phát
+                    </h1>
+                    <h2 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Hưởng phúc gia tiên</h2>
+                    <p class="card-text fs-sm let-space-10 my-3 px-md-4">Đúc Đồng Tường Phát chuyên tâm chế tác những
+                      sản phẩm
+                      đồ đồng cao cấp,
+                      với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
+                    <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
+                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                  </div>
+
+                </div>
+              </div>
+
+
             </div>
             <div class="col-md-4 ps-md-5">
               <div class="row">
@@ -175,37 +216,37 @@
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
                 <!-- Item -->
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
                 <!-- Item -->
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
                 <!-- Item -->
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
                 <!-- Item -->
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
                 <!-- Item -->
                 <div class="col-6 col-md-6">
                   <a href=""><img
                       src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                      class="rounded-3 mb-4 border-pt"></a>
+                      class="rounded-3 mb-4 border-pt scale-effect"></a>
                 </div>
 
 
@@ -233,7 +274,7 @@
               <div class="itm- product pe-md-5">
                 <h4 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Bộ ngũ sự</h4>
                 <a href=""><img src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                    class="rounded-3 shadow-lg" alt="Rounded image"></a>
+                    class="rounded-3 shadow-lg scale-effect" alt="Rounded image"></a>
               </div>
             </div>
             <!-- Item -->
@@ -241,7 +282,7 @@
               <div class="itm- product pe-md-5 p-top">
                 <h4 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Bộ tam sự</h4>
                 <a href=""><img src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                    class="rounded-3 shadow-lg" alt="Rounded image"></a>
+                    class="rounded-3 shadow-lg  scale-effect" alt="Rounded image"></a>
               </div>
             </div>
             <!-- Item -->
@@ -249,7 +290,7 @@
               <div class="itm- product ps-md-5 pt-md-5">
                 <h4 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Tranh đồng</h4>
                 <a href=""><img src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                    class="rounded-3 shadow-lg" alt="Rounded image"></a>
+                    class="rounded-3 shadow-lg  scale-effect" alt="Rounded image"></a>
               </div>
             </div>
             <!-- Item -->
@@ -257,7 +298,7 @@
               <div class="itm- product ps-md-5 pt-md-5 p-top">
                 <h4 class="card-title text-uppercase fw-bold text-color-tp-3 let-space-10">Các sản phẩm khác</h4>
                 <a href=""><img src="https://dodongquangvuong.vn/uploads/tiny_uploads/bo-tam-su/bo-tam-su-dinh-hac.jpg"
-                    class="rounded-3 shadow-lg" alt="Rounded image"></a>
+                    class="rounded-3 shadow-lg  scale-effect" alt="Rounded image"></a>
               </div>
             </div>
           </div>
@@ -314,7 +355,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đài nước</a></h6>
@@ -339,7 +380,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đèn quả dứa</a></h6>
@@ -364,7 +405,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đài nước</a></h6>
@@ -389,7 +430,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đèn quả dứa</a></h6>
@@ -414,7 +455,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đài nước</a></h6>
@@ -439,7 +480,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đèn quả dứa</a></h6>
@@ -464,7 +505,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đài nước</a></h6>
@@ -489,7 +530,7 @@
                   <a class="card-img-top d-block overflow-hidden" href="#">
                     <img
                       src="https://previews.123rf.com/images/worac/worac1402/worac140200001/25990417-antique-brass-teapot-isolated-on-white.jpg"
-                      alt="Product">
+                      class="scale-effect" alt="Product">
                   </a>
                   <div class="card-body py-2 bg-transparent">
                     <h6 class="product-title"><a href="#" class="text-color-tp-3">Đèn quả dứa</a></h6>
@@ -519,7 +560,7 @@
 
     <!-- Testismonials-->
     <section class="bg-position-top-center bg-repeat-0 pb-md-5 text-white"
-      style="background-image: url(../img/image-3.png);">
+      style="background-image: url(img/image-3.png);">
       <div class="container pt-2 pt-md-5">
         <h2 class="text-center text-uppercase fw-bold let-space-10 text-white">Khách đã mua hàng</h2>
         <p class="text-center mb-1">Hàng ngàn gia đình đã sử dụng sản phẩm của Tường phát</p>
@@ -650,7 +691,6 @@
           cả <i class="ci-pt-left-2 rotate-180"></i></a>
       </div>
     </section>
-
   </main>
   <!-- Footer-->
   <!-- Light footer -->
@@ -734,9 +774,19 @@
       </div>
     </div>
   </footer>
-  <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span
-      class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up">
-    </i></a>
+
+  <!-- Back To Top Button-->
+  <a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up"></i></a>
+
+  <!-- Support float -->
+  <div class="mdl-support">
+    <div class="d-flex flex-column">
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-call-2"></i></a>
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-messenger"></i></a>
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-zalo"></i></a>      
+    </div>
+  </div>
+
   <!-- Vendor scrits: js libraries and plugins-->
 
   <script src="vendor/jquery/jquery-3.6.0.slim.js"></script>
