Add the related news module for the news detail page

--- a/home.html
+++ b/home.html
@@ -176,7 +176,7 @@
                       đồ đồng cao cấp,
                       với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
                     <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
-                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                    <p class="text-center"><img src="img/image-6.png" alt=""></p>
                   </div>
 
                   <!-- Item -->
@@ -189,7 +189,7 @@
                       đồ đồng cao cấp,
                       với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
                     <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
-                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                    <p class="text-center"><img src="img/image-6.png" alt=""></p>
                   </div>
 
                   <!-- Item -->
@@ -202,7 +202,7 @@
                       đồ đồng cao cấp,
                       với mong muốn làm đẹp cho đời, mang đến sự thưởng ngoạn viên mãn cho những kiệt tác để đời. </p>
                     <a href="#" class="btn  text-uppercase ftf-oswald btn-primary px-5">Xem ngay</a>
-                    <p class="text-center"><img src="../img/image-6.png" alt=""></p>
+                    <p class="text-center"><img src="img/image-6.png" alt=""></p>
                   </div>
 
                 </div>
