--- a/news-detail.html
+++ b/news-detail.html
@@ -154,107 +154,175 @@
       </div>
     </header>
 
-  
+
     <!-- Detail -->
     <section class="container">
-            <!-- Breadscumb 1-->
-    <div class="row">
+      <!-- Breadscumb 1-->
+      <div class="row">
         <div class="col-12">
-            <nav aria-label="breadcrumb" class="py-3">
+          <nav aria-label="breadcrumb" class="py-3">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Library</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Data</li>
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Library</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Data</li>
             </ol>
-            </nav>
+          </nav>
         </div>
-        </div>
+      </div>
 
-        <div class="row">
-          <div class="col-md-8">
-            <h2 class="text-uppercase fw-bold text-color-tp-3 let-space-10 mb-4">CÓ NÊN SỬ DỤNG BÁT HƯƠNG BẰNG ĐỒNG TRÊN BÀN THỜ KHÔNG?</h2>
-            <!-- Sub info -->
-            <div class="d-flex justify-content-start align-items-center fs-sm">
-              <p class="text-muted me-3 mb-0">24/03/2021</p>
-              <p class="text-muted me-3  mb-0"><i class="ci-eye"></i> 1000</p>
-              <div class="ms-5">
-                <a href="#" class="btn-social rounded-circle bs-facebook me-2">
-                  <i class="ci-facebook"></i>
-                </a>
-                <a href="#" class="btn-social rounded-circle bs-twitter me-2">
-                  <i class="ci-pt-zalo"></i>
-                </a>
-                <a href="#" class="btn-social rounded-circle bs-twitter me-2">
-                  <i class="ci-twitter"></i>
-                </a>
+      <div class="row">
+        <div class="col-md-8">
+          <h2 class="text-uppercase fw-bold text-color-tp-3 let-space-10 mb-4">CÓ NÊN SỬ DỤNG BÁT HƯƠNG BẰNG ĐỒNG TRÊN
+            BÀN THỜ KHÔNG?</h2>
+          <!-- Sub info -->
+          <div class="d-flex justify-content-start align-items-center fs-sm">
+            <p class="text-muted me-3 mb-0">24/03/2021</p>
+            <p class="text-muted me-3  mb-0"><i class="ci-eye"></i> 1000</p>
+            <div class="ms-5">
+              <a href="#" class="btn-social rounded-circle bs-facebook me-2">
+                <i class="ci-facebook"></i>
+              </a>
+              <a href="#" class="btn-social rounded-circle bs-twitter me-2">
+                <i class="ci-pt-zalo"></i>
+              </a>
+              <a href="#" class="btn-social rounded-circle bs-twitter me-2">
+                <i class="ci-twitter"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- Content -->
+          <div class="">
+            <p class="fst-bold">Thờ phụng, hương khói tổ tiên vốn là nét đẹp văn hóa truyền thống của Việt Nam. Tuy
+              nhiên, hiện nay đối với nhiều gia chủ, có nên sử dụng bát hương bằng đồng trên bàn thờ vẫn là một câu hỏi
+              mở, vậy hãy cùng Tường Phát tìm lời giải đáp trong bài viết dưới đây.</p>
+            <p>Ý nghĩa bát hương</p>
+          </div>
+
+          <!-- Tags -->
+          <div class="d-flex justify-content-start align-items-center fs-sm my-3">
+            <p class="text-muted mb-0"><i class="ci-tag"></i> Tags:</p>
+            <div class="ms-3">
+              <a href="">Bàn thờ gia tiên</a> / <a href="">Phong thủy bàn thờ</a> / <a href="">Đồng Cattut</a> / <a
+                href="">Phụ kiện</a> / <a href="">Bàn thờ</a>
+            </div>
+          </div>
+
+          <!-- Share -->
+          <div class="d-flex justify-content-start align-items-center fs-sm">
+            <p class="text-muted mb-0">Chia sẻ:</p>
+            <div class="ms-3">
+              <a href="#" class="btn-social rounded-circle bs-facebook me-2">
+                <i class="ci-facebook"></i>
+              </a>
+              <a href="#" class="btn-social rounded-circle bs-twitter me-2">
+                <i class="ci-pt-zalo"></i>
+              </a>
+              <a href="#" class="btn-social rounded-circle bs-twitter me-2">
+                <i class="ci-twitter"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- Related products-->
+          <div class="pt-4">
+            <h5 class="text-uppercase fw-bold let-space-10 text-color-tp-3">Chủ đề tương tự</h5>
+            <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <!-- Article -->
+                <article>
+                  <a class="blog-entry-thumb mb-3" href="#">
+                    <img class="rounded"
+                      src="https://product.hstatic.net/200000246581/product/img_3162_f35702bb2fd042fe9e2f645fc072b88f_large.jpg"
+                      alt="Post">
+                  </a>
+                  <p class="h6 blog-entry-title">
+                    <a href="#">Có nên sử dụng bát hương</a>
+                  </p>
+                  <p class="fs-sm">Nếu bạn đang tìm kiếm món quà tặng 8/3 ý nghĩa dành tặng mẹ ...</p>
+                </article>
               </div>
-            </div>
-  
-            <!-- Content -->
-            <div class="">
-              <p class="fst-bold">Thờ phụng, hương khói tổ tiên vốn là nét đẹp văn hóa truyền thống của Việt Nam. Tuy
-                nhiên, hiện nay đối với nhiều gia chủ, có nên sử dụng bát hương bằng đồng trên bàn thờ vẫn là một câu hỏi
-                mở, vậy hãy cùng Tường Phát tìm lời giải đáp trong bài viết dưới đây.</p>
-              <p>Ý nghĩa bát hương</p>
-            </div>
-  
-            <!-- Tags -->
-            <div class="d-flex justify-content-start align-items-center fs-sm my-3">
-              <p class="text-muted mb-0"><i class="ci-tag"></i> Tags:</p>
-              <div class="ms-3">
-                <a href="">Bàn thờ gia tiên</a> / <a href="">Phong thủy bàn thờ</a> / <a href="">Đồng Cattut</a> / <a
-                  href="">Phụ kiện</a> / <a href="">Bàn thờ</a>
+              <div class="col-md-3 col-sm-6">
+                <!-- Article -->
+                <article>
+                  <a class="blog-entry-thumb mb-3" href="#">
+                    <img class="rounded"
+                      src="https://product.hstatic.net/200000246581/product/img_3162_f35702bb2fd042fe9e2f645fc072b88f_large.jpg"
+                      alt="Post">
+                  </a>
+                  <p class="h6 blog-entry-title">
+                    <a href="#">Có nên sử dụng bát hương</a>
+                  </p>
+                  <p class="fs-sm">Nếu bạn đang tìm kiếm món quà tặng 8/3 ý nghĩa dành tặng mẹ ...</p>
+                </article>
               </div>
-            </div>
-  
-            <!-- Share -->
-            <div class="d-flex justify-content-start align-items-center fs-sm">
-              <p class="text-muted mb-0">Chia sẻ:</p>
-              <div class="ms-3">
-                <a href="#" class="btn-social rounded-circle bs-facebook me-2">
-                  <i class="ci-facebook"></i>
-                </a>
-                <a href="#" class="btn-social rounded-circle bs-twitter me-2">
-                  <i class="ci-pt-zalo"></i>
-                </a>
-                <a href="#" class="btn-social rounded-circle bs-twitter me-2">
-                  <i class="ci-twitter"></i>
-                </a>
+              <div class="col-md-3 col-sm-6">
+                <!-- Article -->
+                <article>
+                  <a class="blog-entry-thumb mb-3" href="#">
+                    <img class="rounded"
+                      src="https://product.hstatic.net/200000246581/product/img_3162_f35702bb2fd042fe9e2f645fc072b88f_large.jpg"
+                      alt="Post">
+                  </a>
+                  <p class="h6 blog-entry-title">
+                    <a href="#">Có nên sử dụng bát hương</a>
+                  </p>
+                  <p class="fs-sm">Nếu bạn đang tìm kiếm món quà tặng 8/3 ý nghĩa dành tặng mẹ ...</p>
+                </article>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <!-- Article -->
+                <article>
+                  <a class="blog-entry-thumb mb-3" href="#">
+                    <img class="rounded"
+                      src="https://product.hstatic.net/200000246581/product/img_3162_f35702bb2fd042fe9e2f645fc072b88f_large.jpg"
+                      alt="Post">
+                  </a>
+                  <p class="h6 blog-entry-title">
+                    <a href="#">Có nên sử dụng bát hương</a>
+                  </p>
+                  <p class="fs-sm">Nếu bạn đang tìm kiếm món quà tặng 8/3 ý nghĩa dành tặng mẹ ...</p>
+                </article>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mt-3 mt-md-0">
-            <div class="widget">
-              <h5 class="widget-title text-uppercase fw-bold text-color-tp-3 let-space-10 mb-4">Bài viết khác</h5>
-  
-              <!-- Item -->
-              <div class="d-flex align-items-start mb-2 ">
-                <a class="flex-shrink-0 overflow-hidden rounded-3" href="#">
-                  <img src="https://theme.hstatic.net/200000246581/1000662880/14/testimonial1.jpg?v=99" class="scale-effect" width="125" alt="Product" />
-                </a>
-                <div class="ps-2">
-                  <h6 class="widget-product-title"><a href="#">Có nên sử dụng bát hương bằng đồng trên bàn thờ không?</a>
-                  </h6>
-                </div>
+
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0">
+          <div class="widget">
+            <h5 class="widget-title text-uppercase fw-bold text-color-tp-3 let-space-10 mb-4">Bài viết khác</h5>
+
+            <!-- Item -->
+            <div class="d-flex align-items-start mb-2 ">
+              <a class="flex-shrink-0 overflow-hidden rounded-3" href="#">
+                <img src="https://theme.hstatic.net/200000246581/1000662880/14/testimonial1.jpg?v=99"
+                  class="scale-effect" width="125" alt="Product" />
+              </a>
+              <div class="ps-2">
+                <h6 class="widget-product-title"><a href="#">Có nên sử dụng bát hương bằng đồng trên bàn thờ không?</a>
+                </h6>
               </div>
-  
-              <!-- Item -->
-              <div class="d-flex align-items-start mb-2 ">
-                <a class="flex-shrink-0 overflow-hidden rounded-3" href="#">
-                  <img src="https://theme.hstatic.net/200000246581/1000662880/14/testimonial1.jpg?v=99" class="scale-effect" width="125" alt="Product" />
-                </a>
-                <div class="ps-2">
-                  <h6 class="widget-product-title"><a href="#">Ý nghĩa của lọ hoa bằng đồng trong không gian thờ tự</a>
-                  </h6>
-                </div>
-              </div>
-  
-  
-  
             </div>
+
+            <!-- Item -->
+            <div class="d-flex align-items-start mb-2 ">
+              <a class="flex-shrink-0 overflow-hidden rounded-3" href="#">
+                <img src="https://theme.hstatic.net/200000246581/1000662880/14/testimonial1.jpg?v=99"
+                  class="scale-effect" width="125" alt="Product" />
+              </a>
+              <div class="ps-2">
+                <h6 class="widget-product-title"><a href="#">Ý nghĩa của lọ hoa bằng đồng trong không gian thờ tự</a>
+                </h6>
+              </div>
+            </div>
+
+
+
           </div>
         </div>
-      </section>               
+      </div>
+    </section>
+
   </main>
   <!-- Footer-->
   <!-- Light footer -->
@@ -340,14 +408,18 @@
   </footer>
 
   <!-- Back To Top Button-->
-  <a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up"></i></a>
+  <a class="btn-scroll-top" href="#top" data-scroll><span
+      class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up"></i></a>
 
   <!-- Support float -->
   <div class="mdl-support">
     <div class="d-flex flex-column">
-      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-call-2"></i></a>
-      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-messenger"></i></a>
-      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i class="btn-scroll-top-icon ci-pt-zalo"></i></a>      
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i
+          class="btn-scroll-top-icon ci-pt-call-2"></i></a>
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i
+          class="btn-scroll-top-icon ci-pt-messenger"></i></a>
+      <a class="btn-scroll-top position-initial opacity-100 mb-2" href="#"><i
+          class="btn-scroll-top-icon ci-pt-zalo"></i></a>
     </div>
   </div>
 
